# invisibleERP

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  ARCHITECTURE_DECISION.md  CLAUDE.md  LICENSE  MIGRATION_PLAN.md  README.md  _ext_workflow.js  _migration_plan_workflow.js  docker-compose.codespaces.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
compliance/: CONTROL_STATUS_HONEST.md  COSO_ICFR_Audit_Readiness_Plan.md  ISSUE_sod_rule_engine.md  Invisible_ERP_SOX_RCM_v1.xlsx  Invisible_ERP_SoD_Matrix_v1.xlsx  Oshinei_ERP_SOX_RCM_v1.xlsx  Oshinei_ERP_SoD_Matrix_v1.xlsx  PRE_PRODUCTION_AUDIT_2026Q2.md  build_rcm.py  build_sod.py  iso27001-gap-analysis.md  pci-dss-scope-design.md  pentest-rfp.md  rcm-catalog.json  soc2-readiness.md  vulnerability-triage.md
docs/: 02-api-spec.md  (+76 more)
services/forecast-engine/: Dockerfile  README.md  pyproject.toml  railway.json
services/forecast-engine/app/: __init__.py  classify.py  contracts.py  forecasting.py  main.py  network.py  optimization.py  reconcile.py  service.py
services/forecast-engine/tests/: conftest.py  test_auth.py  test_classify.py  test_contract_fixtures.py  test_forecasting.py  test_network.py  test_optimization.py  test_reconcile.py  test_result_cache.py
services/forecast-engine/tests/fixtures/: README.md  forecast_request.json  forecast_response.json  optimize_network_request.json  optimize_network_response.json  optimize_request.json  optimize_response.json
(+2955 files in other folders)
