[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast-engine"
version = "1.0.0"
description = "Invisible ERP SCM planning engine (docs/54) — probabilistic demand forecasting (Prophet) + perishable-aware order optimization (PuLP). Stateless pure-compute; the NestJS API owns all data extraction and persistence."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "prophet>=1.1.6",
  "pulp>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
